--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 body {
-  box-sizing: border-box;
   background-color: #d6e2f0;
   font-family: "Outfit", sans-serif;
   text-align: center;
@@ -21,7 +21,7 @@ body {
   align-items: center;
   background-color: #ffffff;
   padding: 0.75rem;
-  width: 14rem;
+  max-width: 15rem;
   text-align: center;
   margin: 1.2rem auto;
   border-radius: 10px;
@@ -42,7 +42,7 @@ body {
 }
 .qr-info {
   color: hsl(220, 15%, 55%);
-  font-size: 0.9rem;
+  font-size: 0.8rem;
 }
 
 .attribution {
