--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
 }
 .qr-img {
   width: 100%;
-  border-radius: 10px;
+  border-radius: 0.625rem;
 }
 .qr-text {
   padding: 0.5rem;
@@ -38,7 +38,7 @@ body {
   color: #1f3251;
   font-weight: 700;
   font-size: 1.25rem;
-  margin-bottom: 10px;
+  margin-bottom: 0.625rem;
 }
 .qr-info {
   color: hsl(220, 15%, 55%);
