--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
   justify-content: center;
   align-items: center;
   background-color: #ffffff;
-  padding: 0.75rem;
+  padding: 0.75em;
   max-width: 15rem;
   text-align: center;
   margin: 1.2rem auto;
@@ -28,17 +28,17 @@ body {
 }
 .qr-img {
   width: 100%;
-  border-radius: 0.625rem;
+  border-radius: 10px;
 }
 .qr-text {
-  padding: 0.5rem;
+  padding: 0.5em;
 }
 
 .qr-about {
   color: #1f3251;
   font-weight: 700;
-  font-size: 1.25rem;
-  margin-bottom: 0.625rem;
+  font-size: 1.15rem;
+  margin-bottom: 0.625em;
 }
 .qr-info {
   color: hsl(220, 15%, 55%);
