--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
   align-items: center;
   background-color: #ffffff;
   padding: 0.75em;
-  max-width: 15rem;
+  max-width: 240px;
   text-align: center;
   margin: 1.2rem auto;
   border-radius: 10px;
